# icecube-display

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile-ic  Doxyfile-it  README.md  pocket_icetop.dxf  pocket_icetop_large.dxf  render.py  spectral_display.py
doc/: .gitignore  display-implementations.md  display.md  eeprom-layout.md  icecube-display.md  icetop-display.md  initialisation.md  main.md  new-implementation.md  serial-number.md  upgrade.md  usb-icecube.md  usb-icetop.md  usb-interface.md
doc/examples/: display_config.json  usb.py
doc/geometry/: geometry_reduced.txt  icetop-array.gnu
doc/pcb-user/: svg-to-png.sh
events/: event_s125_0_0.5_zen_0.3_0.35.txt  event_s125_0_0.5_zen_0_0.1.txt  event_s125_1_1.5_zen_0.3_0.35.txt  event_s125_1_1.5_zen_0_0.1.txt  event_s125_2_2.5_zen_0_0.1.txt
firmware/common/: frame_buffer.c  memspace.c
firmware/common/render/: hex_geometry.c
firmware/common/usb/: configuration.c  descriptor.c.in  endpoint_0.c  remote_renderer.c  serial.c.in
firmware/common/util/: tlv_list.c
firmware/icecube-teensy32/: CMakeLists.txt  display_properties.c  eeprom.c  mk20dx256.ld
firmware/icecube-teensy32/configurations/: display_config_muenster.json  display_config_ugent.json  display_config_virtual.json  update_eeprom.py
firmware/icecube-teensy32/include/: device_properties.h  display_types.h
firmware/icecube-teensy32/include/kinetis/: usb_bdt.h
firmware/icecube-teensy32/include/render/: rain.h
firmware/icecube-teensy32/kinetis/: ftm.c
firmware/icecube-teensy32/render/: test.c
firmware/icecube-teensy32/scripts/: write_eeprom.py
firmware/icecube-teensy32/src/: display_driver.c  display_properties.c  frame_timer_backend.c  main.c  remote_usb.c
firmware/icecube-teensy32/src/kinetis/: usb_bdt.c
firmware/icecube-teensy32/src/render/: rain.c
firmware/icecube-teensy32/src/usb/: descriptor.c  endpoint.c
firmware/icecube-teensy32/usb/: address.c
firmware/icetop-atmega32u4/: CMakeLists.txt  display_driver.c  display_properties.c  switches.c
firmware/icetop-atmega32u4/events/: README  event_s125_0_0.5_zen_0.2_0.25.txt  event_s125_1_1.5_zen_0.2_0.25.txt  event_s125_2_2.5_zen_0.2_0.25.txt  event_s125_2_2.5_zen_0.3_0.35.txt
firmware/icetop-atmega32u4/icetopdisplay/: __init__.py  geometry.py
firmware/icetop-atmega32u4/include/: display_types.h  switches.h
firmware/icetop-atmega32u4/include/avr/: endpoint_stack.h
firmware/icetop-atmega32u4/include/render/: boot_splash.h  demo.h  test_ring.h  test_scan.h
firmware/icetop-atmega32u4/include/usb/: endpoint_fifo.h  endpoint_stack.h  fifo.h
firmware/icetop-atmega32u4/render/: demo.c
firmware/icetop-atmega32u4/src/: avr_main.c  display_driver.c  display_properties.c  frame_timer_backend.c  remote_usb.c
firmware/icetop-atmega32u4/src/avr/: endpoint_stack.c
firmware/icetop-atmega32u4/src/render/: boot_splash.c  demo.c  test_ring.c  test_scan.c
firmware/icetop-atmega32u4/src/usb/: descriptor.c  endpoint.c  endpoint_fifo.c  endpoint_stack.c
firmware/icetop-atmega32u4/usb/: address.c  endpoint.c  fifo.h  led.c
firmware/include/: display_driver.h  display_properties.h  frame_buffer.h  frame_queue.h  frame_timer.h  frame_timer_backend.h  memspace.h  remote.h  renderer.h
firmware/include/render/: hex_geometry.h  renderer.h
firmware/include/usb/: address.h  configuration.h  descriptor.h  device.h  endpoint.h  endpoint_0.h  remote_renderer.h  std.h
firmware/include/util/: tlv_list.h
hardware/: .gitignore
hardware/icecube-modular/: README.md  strip_suspension_105mm.dxf
hardware/icecube-modular/string_adapter_pcb/: string_adapter.kicad_pcb  string_adapter.pro
hardware/icecube-modular/strip_clip/: back_bottom.scad  back_top.scad  clamp_all.scad  clamp_back_bottom.scad  clamp_back_top.scad  clamp_common.scad  clamp_front.scad  front.scad
hardware/pocket-icetop/: README.md  pocket_icetop.dxf  pocket_icetop_large.dxf
hardware/pocket-icetop/pcb/: fp-lib-table  pocket-icetop-cache.lib  pocket-icetop.kicad_pcb  pocket-icetop.pro
icetopdisplay/: __init__.py  com.py  geometry.py  led_format.py  textdisplay.py
pcb/: .gitignore  pocket-icetop-cache.lib  pocket-icetop.kicad_pcb  pocket-icetop.sch  sheet_layout.kicad_wks
pcb/pocket-icetop.pretty/: LED-3MM-spacer.kicad_mod  SW_Tactile_SPST_Angled.kicad_mod  ugent-logo.kicad_mod
src/: avr_main.c  demo.c  demo.h  display_driver.c  display_driver.h  display_properties.c  display_properties.h  display_state.c  display_state.h  event.c  event.h  frame_buffer.c  frame_buffer.h  frame_queue.c  frame_queue.h  frame_timer.c  frame_timer.h  frame_timer_backend.h  frame_timer_sof_tracker.c  frame_timer_sof_tracker.h  memspace.h  remote.c  remote.h  remote_serial.c  remote_usb.c  serial.c  serial.h  switches.c  switches.h  test_render.c  test_render.h  usb.h
src/avr/: endpoint_stack.c
src/render/: boot_splash.c  boot_splash.h  demo.c  demo.h  hex_geometry.h  renderer.h  test.c  test.h  test_ring.c  test_ring.h  test_scan.c  test_scan.h
src/usb/: address.c  address.h  communication.c  configuration.c  configuration.h  descriptor.c  descriptor.h  device.c  device.h  endpoint.c  endpoint.h  endpoint_0.c  endpoint_0.h  fifo.c  fifo.h  isr.c  led.c  led.h  remote_renderer.c  remote_renderer.h  serial.c.in  std.h
steamshovel/: LedDisplay.py  NewLedDisplay.py  README_TESTING  virtual.py
teensy/: CMakeLists.txt  display_config_ugent.json  update_eeprom.py  update_string_config.py
teensy/src/: display_driver.c  display_properties.c  frame_buffer.c  frame_queue.c  frame_timer.c  frame_timer_backend.c  frame_timer_sof_tracker.c  main.c  memspace.c  mk20dx256.ld  remote_usb.c  startup.c
teensy/src/kinetis/: dma.c  dma.h  ftm.h  io.h  pit.c  pit.h  usb.h  usb_bdt.c  usb_bdt.h
teensy/src/render/: rain.c  test.h
teensy/src/usb/: configuration.c  descriptor.c  device.c  endpoint.c  endpoint_0.c  endpoint_kinetis.h  led.c  remote_renderer.c  remote_renderer_feedback.c  remote_renderer_feedback.h  serial.c.in
test_usb/: display_eeprom.py  display_info.py  test_draw.py
udev_rules/: 90-icecube.rules
(+14 files in other folders)
